project(HelloZMQ)
cmake_minimum_required(VERSION 3.0)

include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

add_executable(client client.cpp)
add_executable(server server.cpp)
add_executable(server2 server2.cpp)
add_executable(pub pub.cpp)
add_executable(pub2 pub2.cpp)
add_executable(sub sub.cpp)
target_link_libraries(client ${CONAN_LIBS})
target_link_libraries(server ${CONAN_LIBS})
target_link_libraries(server2 ${CONAN_LIBS})
target_link_libraries(pub ${CONAN_LIBS})
target_link_libraries(pub2 ${CONAN_LIBS})
target_link_libraries(sub ${CONAN_LIBS})